--- a/PosTestUebung_Autor/PosTestUebung_Autor/Views/Home/Index.cshtml
+++ b/PosTestUebung_Autor/PosTestUebung_Autor/Views/Home/Index.cshtml
@@ -12,7 +12,7 @@
                 <div class="col mb-0">
                     <div class="card" style="width: 18rem">
                         <div class="card-header">
-                            <h5 class="card-title text-center">@Html.DisplayFor(modelItem => author.Name)</h5>
+                            <h5 class="card-title text-center">@Html.DisplayFor(modelItem => author.Name) (@Html.DisplayFor(modelItem => author.Age))</h5>
                         </div>
                         <div class="card-body">
                             <p style="text-align:center" class="card-text">@author.Description</p>
